edição do index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cardosoconfeccoes.com/" />
+    <meta property="og:url" content="https://confeccoescardoso.online" />
     <meta
       property="og:title"
       content="Cardoso Confecções - Fardamentos Industriais e Profissionais"
@@ -68,7 +68,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://cardosoconfeccoes.com/" />
+    <meta property="twitter:url" content="https://confeccoescardoso.online" />
     <meta
       property="twitter:title"
       content="Cardoso Confecções - Fardamentos Industriais e Profissionais"
@@ -90,7 +90,7 @@
     <meta name="apple-mobile-web-app-title" content="Cardoso Confecções" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://cardosoconfeccoes.com/" />
+    <link rel="canonical" href="https://confeccoescardoso.online" />
 
     <!-- Structured Data / JSON-LD -->
     <script type="application/ld+json">
@@ -99,7 +99,7 @@
         "@type": "ClothingStore",
         "name": "Cardoso Confecções",
         "description": "Especialistas em fardamentos industriais, escolares, profissionais e corporativos. Uniformes para laticínios, lanchonetes, indústrias, escolas e prefeituras.",
-        "url": "https://cardosoconfeccoes.com/",
+        "url": "https://confeccoescardoso.online",
         "logo": "https://i.ibb.co/fGrgD53C/logo-Confec2.webp",
         "image": "https://i.ibb.co/fGrgD53C/logo-Confec2.webp",
         "telephone": "+5579999062401",
