--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.ibb.co/fGrgD53C/logo-Confec2.webp"
+      content="https://i.ibb.co/GQCX9mMQ/Grupo-de-4-objetos.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -79,7 +79,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://i.ibb.co/fGrgD53C/logo-Confec2.webp"
+      content="https://i.ibb.co/GQCX9mMQ/Grupo-de-4-objetos.png"
     />
 
     <!-- Additional SEO Meta Tags -->
@@ -100,8 +100,8 @@
         "name": "Cardoso Confecções",
         "description": "Especialistas em fardamentos industriais, escolares, profissionais e corporativos. Uniformes para laticínios, lanchonetes, indústrias, escolas e prefeituras.",
         "url": "https://confeccoescardoso.online",
-        "logo": "https://i.ibb.co/fGrgD53C/logo-Confec2.webp",
-        "image": "https://i.ibb.co/fGrgD53C/logo-Confec2.webp",
+        "logo": "https://i.ibb.co/GQCX9mMQ/Grupo-de-4-objetos.png",
+        "image": "https://i.ibb.co/GQCX9mMQ/Grupo-de-4-objetos.png",
         "telephone": "+5579999062401",
         "email": "contato@cardosoconfeccoes.com",
         "address": {
